modify: sidebar style

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,7 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
-        <img
-            alt="logo"
-            src="../../assets/layout/images/logo.png">
-        <span>The Editor</span>
+        <img alt="logo" src="../../assets/layout/images/logo.png">
+        <span>ACEditor</span>
     </a>
 
     <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button">
