add: init editor with quill

--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -7,7 +7,7 @@
         <div class="layout-main">
             <router-outlet></router-outlet>
         </div>
-        <app-status></app-status>
+<!--        <app-status></app-status>-->
     </div>
     <app-config></app-config>
     <div class="layout-mask"></div>
