--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,13 @@ $gutter: 1rem; //for primeflex grid system
 @import "../node_modules/primeflex/primeflex.scss";
 @import "../node_modules/primeicons/primeicons.css";
 @import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+//@import "primeng/resources/themes/vela-blue/theme.css";
 
 /* Demos */
 //@import "assets/demo/styles/flags/flags.css";
 //@import "assets/demo/styles/badges.scss";
 //@import "assets/demo/styles/code.scss";
+
+// import Quill styles in styles.scss
+@import "../node_modules/quill/dist/quill.core.css";
+@import "../node_modules/quill/dist/quill.snow.css";
