--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,70 @@ $gutter: 1rem; //for primeflex grid system
 // import Quill styles in styles.scss
 @import "../node_modules/quill/dist/quill.core.css";
 @import "../node_modules/quill/dist/quill.snow.css";
+
+
+@import url('https://fonts.googleapis.com/css2?family=Times+New+Roman:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arial:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+New:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Georgia:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lucida+Sans:wght@400;700&display=swap');
+
+.ql-font-arial {
+  font-family: 'Arial', sans-serif;
+}
+
+.ql-font-comic-sans {
+  font-family: 'Comic Sans MS', cursive;
+}
+
+.ql-font-courier-new {
+  font-family: 'Courier New', monospace;
+}
+
+.ql-font-georgia {
+  font-family: 'Georgia', serif;
+}
+
+.ql-font-helvetica {
+  font-family: 'Helvetica', sans-serif;
+}
+
+.ql-font-lucida {
+  font-family: 'Lucida Sans', sans-serif;
+}
+
+.ql-font-times-new-roman {
+  font-family: 'Times New Roman', serif;
+}
+
+/* Set dropdown font-families */
+.ql-font span[data-label='Arial']::before {
+  font-family: 'Arial', sans-serif;
+}
+
+.ql-font span[data-label='Comic Sans']::before {
+  font-family: 'Comic Sans MS', cursive;
+}
+
+.ql-font span[data-label='Courier New']::before {
+  font-family: 'Courier New', monospace;
+}
+
+.ql-font span[data-label='Georgia']::before {
+  font-family: 'Georgia', serif;
+}
+
+.ql-font span[data-label='Helvetica']::before {
+  font-family: 'Helvetica', sans-serif;
+}
+
+.ql-font span[data-label='Lucida']::before {
+  font-family: 'Lucida Sans', sans-serif;
+}
+
+.ql-font span[data-label='Times New Roman']::before {
+  font-family: 'Times New Roman', serif;
+}
+
