--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -53,7 +53,10 @@
 
 <div class="p-editor-container" style="height: 85vh">
 
-  <div #editor id="editor" class="p-editor-content" style="font-size: 16px; font-family: 'Times New Roman', serif">
+  <div #editor
+       id="editor"
+       class="p-editor-content"
+       style="font-size: 16px; font-family: 'Times New Roman', serif; height: calc(100vh - 9rem); width: 100%;border: 2px;">
   </div>
 
 </div>
