--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
         <span>ACEditor</span>
     </a>
 
-    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button">
+    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
         <i class="pi pi-bars"></i>
     </button>
 
@@ -67,10 +67,10 @@
     <button class="ql-clean">Remove Formatting</button>
   </div>
 
-    <button #topbarmenubutton (click)="layoutService.showProfileSidebar()"
-            class="p-link layout-topbar-menu-button layout-topbar-button">
-        <i class="pi pi-ellipsis-v"></i>
-    </button>
+<!--    <button #topbarmenubutton (click)="layoutService.showProfileSidebar()"-->
+<!--            class="p-link layout-topbar-menu-button layout-topbar-button">-->
+<!--        <i class="pi pi-ellipsis-v"></i>-->
+<!--    </button>-->
 
 <!--    <div #topbarmenu [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}"-->
 <!--         class="layout-topbar-menu">-->
