--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -87,22 +87,24 @@
     <p-dialog
       header="Settings"
       [(visible)]="settingDialogVisible"
-      [style]="{ width: '30rem' }"
+      [style]="{ width: '30rem', height: '18rem' }"
       (onHide)="hideSettingDialog()"
     >
-      <span class="p-text-secondary block mb-5">Update your information.</span>
+      <!--      <span class="p-text-secondary block mb-5">Update your information.</span>-->
       <div class="flex align-items-center gap-3 mb-3">
-        <label for="token" class="font-semibold w-12rem">chatGPT Token</label>
+        <label for="token" class="font-semibold w-8rem">chatGPT Token</label>
         <input pInputText id="token" class="flex-auto" autocomplete="off"/>
       </div>
 
       <div class="flex align-items-center gap-3 mb-3">
-        <label class="font-semibold w-12rem">chatGPT Model</label>
+        <label class="font-semibold w-8rem">chatGPT Model</label>
         <p-dropdown
           [options]="[{name: 'GPT-3.5 Turbo', code: 'gpt-3.5-turbo'}, {name: 'GPT-4o', code: 'gpt-4o'}]"
           [(ngModel)]="selectedModel"
           optionLabel="name"
+          scrollHeight="20rem"
           [style]="{ width: '100%' }"
+          class="flex-auto"
           placeholder='GPT-3.5 Turbo'/>
       </div>
 
