--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,10 @@ $gutter: 1rem; //for primeflex grid system
   font-family: 'Times New Roman', serif;
 }
 
+.p-overlaypanel .p-overlaypanel-content {
+  padding: 0.25rem;
+}
+
+.p-tieredmenu.p-tieredmenu-overlay {
+  font-family: 'Comic Sans MS', cursive;
+}
