--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,162 +1,162 @@
 <div class="layout-topbar">
-  <a class="layout-topbar-logo" routerLink="">
-    <img alt="logo" src="../../assets/layout/images/logo.png">
-    <span>ACEditor</span>
-  </a>
+    <a class="layout-topbar-logo" routerLink="">
+        <img alt="logo" src="../../assets/layout/images/logo.png">
+        <span>ACEditor</span>
+    </a>
 
-  <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
-    <i class="pi pi-bars"></i>
-  </button>
-
-  <div #toolbar id="toolbar" class="p-editor-toolbar" style="border: none !important;">
-    <select class="ql-font" style="width: 11rem">
-      <option selected>Times New Roman</option>
-      <option value="arial">Arial</option>
-      <option value="comic-sans">Comic Sans</option>
-      <option value="courier-new">Courier New</option>
-      <option value="georgia">Georgia</option>
-      <option value="helvetica">Helvetica</option>
-      <option value="lucida">Lucida</option>
-    </select>
-    <select class="ql-size">
-      <option value="10px">10px</option>
-      <option value="12px">12px</option>
-      <option value="14px">14px</option>
-      <option value="16px" selected>16px</option>
-      <option value="18px">18px</option>
-      <option value="24px">24px</option>
-      <option value="36px">36px</option>
-    </select>
-    <select class="ql-header">
-      <option value="1">H1</option>
-      <option value="2">H2</option>
-      <option value="3">H3</option>
-      <option value="4">H4</option>
-      <option value="5">H5</option>
-      <option value="6">H6</option>
-      <option selected>Normal</option>
-    </select>
-    <button class="ql-bold" aria-label="Bold"></button>
-    <button class="ql-italic" aria-label="Italic"></button>
-    <button class="ql-underline" aria-label="Underline"></button>
-    <button class="ql-strike" aria-label="Strike"></button>
-    <button class="ql-blockquote" aria-label="Blockquote"></button>
-    <button class="ql-code-block" aria-label="Code Block"></button>
-    <!--  <button class="ql-header" value="1">H1</button>-->
-    <!--  <button class="ql-header" value="2">H2</button>-->
-    <button class="ql-list" value="ordered">Ordered List</button>
-    <button class="ql-list" value="bullet">Bullet List</button>
-    <!--    <button class="ql-script" value="sub">Subscript</button>-->
-    <!--    <button class="ql-script" value="super">Superscript</button>-->
-    <!--  <button class="ql-indent" value="-1">Outdent</button>-->
-    <!--  <button class="ql-indent" value="+1">Indent</button>-->
-    <!--  <button class="ql-direction" value="rtl">RTL</button>-->
-    <!--  <select class="ql-size">-->
-    <!--    <option value="small">Small</option>-->
-    <!--    <option selected>Normal</option>-->
-    <!--    <option value="large">Large</option>-->
-    <!--    <option value="huge">Huge</option>-->
-    <!--  </select>-->
-
-    <select class="ql-color"></select>
-    <select class="ql-background"></select>
-    <select class="ql-align"></select>
-    <button class="ql-link">Link</button>
-    <button class="ql-image">Image</button>
-    <!--    <button class="ql-video">Video</button>-->
-    <button class="ql-clean">Remove Formatting</button>
-  </div>
-
-  <p-splitButton
-    icon="pi pi-sparkles"
-    [model]="prompts"
-    severity="help"
-    [style]="{height: '1.9rem', 'margin-top': '-1.5px', 'width': '4.5rem'}"
-  />
-
-  <button #topbarmenubutton (click)="layoutService.showProfileSidebar()"
-          class="p-link layout-topbar-menu-button layout-topbar-button">
-    <i class="pi pi-ellipsis-v"></i>
-  </button>
-
-  <div #topbarmenu [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}"
-       class="layout-topbar-menu">
-
-    <button class="p-link layout-topbar-button" (click)="toggleAuthDialog()">
-      <i class="pi pi-user"></i>
-      <span>Profile</span>
+    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
+        <i class="pi pi-bars"></i>
     </button>
 
-    <!--Login Dialog-->
-    <p-dialog
-      header="Header"
-      [(visible)]="authDialogVisible"
-      [style]="{ width: '35rem' }"
-      closable="false"
-    >
-      <ng-template pTemplate="header">
-        <div class="text-center mb-5 w-full">
-          <img src="../../assets/layout/images/logo.png" alt="Image" height="50" class="mb-3">
-          <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
-          <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-          <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
-        </div>
+    <div #toolbar class="p-editor-toolbar" id="toolbar" style="border: none !important;">
+        <select class="ql-font" style="width: 11rem">
+            <option selected>Times New Roman</option>
+            <option value="arial">Arial</option>
+            <option value="comic-sans">Comic Sans</option>
+            <option value="courier-new">Courier New</option>
+            <option value="georgia">Georgia</option>
+            <option value="helvetica">Helvetica</option>
+            <option value="lucida">Lucida</option>
+        </select>
+        <select class="ql-size">
+            <option value="10px">10px</option>
+            <option value="12px">12px</option>
+            <option value="14px">14px</option>
+            <option selected value="16px">16px</option>
+            <option value="18px">18px</option>
+            <option value="24px">24px</option>
+            <option value="36px">36px</option>
+        </select>
+        <select class="ql-header">
+            <option value="1">H1</option>
+            <option value="2">H2</option>
+            <option value="3">H3</option>
+            <option value="4">H4</option>
+            <option value="5">H5</option>
+            <option value="6">H6</option>
+            <option selected>Normal</option>
+        </select>
+        <button aria-label="Bold" class="ql-bold"></button>
+        <button aria-label="Italic" class="ql-italic"></button>
+        <button aria-label="Underline" class="ql-underline"></button>
+        <button aria-label="Strike" class="ql-strike"></button>
+        <button aria-label="Blockquote" class="ql-blockquote"></button>
+        <button aria-label="Code Block" class="ql-code-block"></button>
+        <!--  <button class="ql-header" value="1">H1</button>-->
+        <!--  <button class="ql-header" value="2">H2</button>-->
+        <button class="ql-list" value="ordered">Ordered List</button>
+        <button class="ql-list" value="bullet">Bullet List</button>
+        <!--    <button class="ql-script" value="sub">Subscript</button>-->
+        <!--    <button class="ql-script" value="super">Superscript</button>-->
+        <!--  <button class="ql-indent" value="-1">Outdent</button>-->
+        <!--  <button class="ql-indent" value="+1">Indent</button>-->
+        <!--  <button class="ql-direction" value="rtl">RTL</button>-->
+        <!--  <select class="ql-size">-->
+        <!--    <option value="small">Small</option>-->
+        <!--    <option selected>Normal</option>-->
+        <!--    <option value="large">Large</option>-->
+        <!--    <option value="huge">Huge</option>-->
+        <!--  </select>-->
 
-      </ng-template>
-      <div>
-        <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-        <input id="email1" type="text" pInputText class="w-full mb-3">
+        <select class="ql-color"></select>
+        <select class="ql-background"></select>
+        <select class="ql-align"></select>
+        <button class="ql-link">Link</button>
+        <button class="ql-image">Image</button>
+        <!--    <button class="ql-video">Video</button>-->
+        <button class="ql-clean">Remove Formatting</button>
+    </div>
 
-        <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-        <input id="password1" type="password" pInputText class="w-full mb-3">
+    <p-splitButton
+        [model]="prompts"
+        [style]="{height: '1.9rem', 'margin-top': '-1.5px', 'width': '4.5rem', 'margin-right' : '1rem'}"
+        icon="pi pi-sparkles"
+        severity="help"
+    />
 
-        <div class="flex align-items-center justify-content-between mb-6">
-          <div class="flex align-items-center">
-            <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-            <label for="rememberme1">Remember me</label>
-          </div>
-          <!--          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
-        </div>
-        <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="hideAuthDialog()"></button>
-      </div>
-    </p-dialog>
-
-
-    <button class="p-link layout-topbar-button" (click)="toggleSettingDialog()">
-      <i class="pi pi-cog"></i>
-      <span>Settings</span>
+    <button #topbarmenubutton (click)="layoutService.showProfileSidebar()"
+            class="p-link layout-topbar-menu-button layout-topbar-button">
+        <i class="pi pi-ellipsis-v"></i>
     </button>
 
-    <!--Settings Dialog-->
-    <p-dialog
-      header="Settings"
-      [(visible)]="settingDialogVisible"
-      [style]="{ width: '30rem', height: '18rem' }"
-      (onHide)="hideSettingDialog()"
-    >
-      <!--      <span class="p-text-secondary block mb-5">Update your information.</span>-->
-      <div class="flex align-items-center gap-3 mb-3">
-        <label for="token" class="font-semibold w-8rem">chatGPT Token</label>
-        <input pInputText id="token" type="password" class="flex-auto" autocomplete="off" [(ngModel)]="token"/>
-      </div>
+    <div #topbarmenu [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}"
+         class="layout-topbar-menu">
 
-      <div class="flex align-items-center gap-3 mb-3">
-        <label class="font-semibold w-8rem">chatGPT Model</label>
-        <p-dropdown
-          [options]="[{name: 'GPT-3.5 Turbo', code: 'gpt-3.5-turbo'}, {name: 'GPT-4o', code: 'gpt-4o'}]"
-          [(ngModel)]="selectedModel"
-          optionLabel="name"
-          scrollHeight="20rem"
-          [style]="{ width: '100%' }"
-          class="flex-auto"
-          placeholder='GPT-3.5 Turbo'/>
-      </div>
-      <div class="flex justify-content-end gap-2">
-        <!--        <p-button label="Cancel" severity="secondary" (onClick)="hideSettingDialog()"/>-->
-        <p-button label="Save to LocalStorage" (onClick)="hideSettingDialog()"/>
-      </div>
-    </p-dialog>
+        <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">
+            <i class="pi pi-user"></i>
+            <span>Profile</span>
+        </button>
 
-    <!--    <p-menubar class="p-link" [model]="items"></p-menubar>-->
-  </div>
+        <!--Login Dialog-->
+        <p-dialog
+            [(visible)]="authDialogVisible"
+            [style]="{ width: '35rem' }"
+            closable="false"
+            header="Header"
+        >
+            <ng-template pTemplate="header">
+                <div class="text-center mb-5 w-full">
+                    <img alt="Image" class="mb-3" height="50" src="../../assets/layout/images/logo.png">
+                    <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
+                    <span class="text-600 font-medium line-height-3">Don't have an account?</span>
+                    <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
+                </div>
+
+            </ng-template>
+            <div>
+                <label class="block text-900 font-medium mb-2" for="email1">Email</label>
+                <input class="w-full mb-3" id="email1" pInputText type="text">
+
+                <label class="block text-900 font-medium mb-2" for="password1">Password</label>
+                <input class="w-full mb-3" id="password1" pInputText type="password">
+
+                <div class="flex align-items-center justify-content-between mb-6">
+                    <div class="flex align-items-center">
+                        <p-checkbox [binary]="true" id="rememberme1" styleClass="mr-2"></p-checkbox>
+                        <label for="rememberme1">Remember me</label>
+                    </div>
+                    <!--          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
+                </div>
+                <button (click)="hideAuthDialog()" class="w-full" icon="pi pi-user" label="Sign In" pButton pRipple></button>
+            </div>
+        </p-dialog>
+
+
+        <button (click)="toggleSettingDialog()" class="p-link layout-topbar-button">
+            <i class="pi pi-cog"></i>
+            <span>Settings</span>
+        </button>
+
+        <!--Settings Dialog-->
+        <p-dialog
+            (onHide)="hideSettingDialog()"
+            [(visible)]="settingDialogVisible"
+            [style]="{ width: '30rem', height: '18rem' }"
+            header="Settings"
+        >
+            <!--      <span class="p-text-secondary block mb-5">Update your information.</span>-->
+            <div class="flex align-items-center gap-3 mb-3">
+                <label class="font-semibold w-8rem" for="token">chatGPT Token</label>
+                <input [(ngModel)]="token" autocomplete="off" class="flex-auto" id="token" pInputText type="password"/>
+            </div>
+
+            <div class="flex align-items-center gap-3 mb-3">
+                <label class="font-semibold w-8rem">chatGPT Model</label>
+                <p-dropdown
+                    [(ngModel)]="selectedModel"
+                    [options]="[{name: 'GPT-3.5 Turbo', code: 'gpt-3.5-turbo'}, {name: 'GPT-4o', code: 'gpt-4o'}]"
+                    [style]="{ width: '100%' }"
+                    class="flex-auto"
+                    optionLabel="name"
+                    placeholder='GPT-3.5 Turbo'
+                    scrollHeight="20rem"/>
+            </div>
+            <div class="flex justify-content-end gap-2">
+                <!--        <p-button label="Cancel" severity="secondary" (onClick)="hideSettingDialog()"/>-->
+                <p-button (onClick)="hideSettingDialog()" label="Save to LocalStorage"/>
+            </div>
+        </p-dialog>
+
+        <!--    <p-menubar class="p-link" [model]="items"></p-menubar>-->
+    </div>
 </div>
