--- a/src/app/status/status.component.html
+++ b/src/app/status/status.component.html
@@ -1,3 +1,3 @@
 <div class="layout-footer">
-    <p-progressBar *ngIf="loading"  mode="indeterminate" [style]="{'height': '3px'}"/>
+    <p-progressBar *ngIf="loading" [style]="{'height': '3px'}" mode="indeterminate"/>
 </div>
