--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -11,4 +11,8 @@
     </div>
     <app-config></app-config>
     <div class="layout-mask"></div>
+
+    <div class="card flex justify-content-center">
+        <p-toast [life]="10000" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }" />
+    </div>
 </div>
