--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,9 +86,18 @@ $gutter: 1rem; //for primeflex grid system
 }
 
 .p-overlaypanel .p-overlaypanel-content {
-    padding: 0.25rem;
+    padding: 0.125rem;
 }
 
 .p-tieredmenu.p-tieredmenu-overlay {
     font-family: 'Comic Sans MS', cursive;
+}
+
+.layout-main .p-dialog .p-dialog-content {
+    padding-top: 42px;
+    //padding-bottom: 0px;
+}
+
+.layout-main .p-dialog .p-dialog-header {
+    padding: 0;
 }
