--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -6,18 +6,36 @@
     <div class="layout-main-container">
         <div class="layout-main">
             <p-dialog
+                #chatMsgDialog
+                header="🤖ChatGPT"
                 [modal]="true"
                 dismissableMask="true"
                 position="bottom"
                 [(visible)]="chatMsgDialogVisible"
-                [style]="{ width: '70rem', height: '12rem' }"
+                [style]="{ width: '70rem' }"
                 transitionOptions="250ms cubic-bezier(0, 0, 0.2, 1)"
             >
-                <div class="flex align-items-center mb-3">
-                    <label class="font-semibold w-6rem">🤖ChatGPT</label>
-                    <input placeholder="Ask ChatGPT ..." pInputText id="username" class="flex-auto" autocomplete="off"/>
+                <div *ngIf="chatDialogVisible">
+                    <div class="align-items-center mb-3">
+                        <textarea
+                            pInputTextarea
+                            [style]="{height: '20rem', width:'100%'}"
+                            [autoResize]="true"
+                            [contentEditable]="false"
+                            [(ngModel)]="chatResponseMsg">
+                        </textarea>
+                    </div>
+                    <div class="flex align-items-center gap-3 mb-3">
+                        <p-button label="Replace" severity="warning"></p-button>
+                        <p-button label="Insert" severity="help"></p-button>
+                        <p-button icon="pi pi-refresh"></p-button>
+                    </div>
+                </div>
+                <div class="flex align-items-center gap-3 mb-3">
+                    <input placeholder="Ask 🤖ChatGPT" pInputText class="flex-auto" autocomplete="off"/>
                     <p-button icon="pi pi-send" (onClick)="sendChatMsgDialog()"/>
                 </div>
+
             </p-dialog>
             <router-outlet></router-outlet>
         </div>
