--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -145,7 +145,7 @@
                 <label class="font-semibold w-8rem">chatGPT Model</label>
                 <p-dropdown
                     [(ngModel)]="selectedModel"
-                    [options]="[{name: 'GPT-3.5 Turbo', code: 'gpt-3.5-turbo'}, {name: 'GPT-4o', code: 'gpt-4o'}]"
+                    [options]="[{name: 'GPT-3.5 Turbo', code: 'gpt-3.5-turbo'}, {name: 'GPT-4o', code: 'gpt-4o'}, {name: 'GPT-4o Mini', code: 'gpt-4o-mini'}]"
                     [style]="{ width: '100%' }"
                     class="flex-auto"
                     optionLabel="name"
