--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -6,36 +6,31 @@
     <div class="layout-main-container">
         <div class="layout-main">
             <p-dialog
-                #chatMsgDialog
+                (onHide)="hidechatMsgDialog()"
                 header="🤖ChatGPT"
                 [modal]="true"
                 dismissableMask="true"
+                maximizable="true"
                 position="bottom"
                 [(visible)]="chatMsgDialogVisible"
                 [style]="{ width: '70rem' }"
                 transitionOptions="250ms cubic-bezier(0, 0, 0.2, 1)"
             >
-                <div *ngIf="chatDialogVisible">
-                    <div class="align-items-center mb-3">
-                        <textarea
-                            pInputTextarea
-                            [style]="{height: '20rem', width:'100%'}"
-                            [autoResize]="true"
-                            [contentEditable]="false"
-                            [(ngModel)]="chatResponseMsg">
-                        </textarea>
+                <div *ngIf="chatDialogVisible" style="height: 90%">
+                    <div #chatDialog id="chatDialog" class="mb-3" style="height:60vh; overflow-y: auto">
+                        <!--Chat messages will be appended here-->
                     </div>
                     <div class="flex align-items-center gap-3 mb-3">
+                        <!--todo-->
                         <p-button label="Replace" severity="warning"></p-button>
                         <p-button label="Insert" severity="help"></p-button>
                         <p-button icon="pi pi-refresh"></p-button>
                     </div>
                 </div>
                 <div class="flex align-items-center gap-3 mb-3">
-                    <input placeholder="Ask 🤖ChatGPT" pInputText class="flex-auto" autocomplete="off"/>
+                    <input placeholder="Ask 🤖ChatGPT" style="font-size: 18px" pInputText [(ngModel)]="question" class="flex-auto" autocomplete="off"/>
                     <p-button icon="pi pi-send" (onClick)="sendChatMsgDialog()"/>
                 </div>
-
             </p-dialog>
             <router-outlet></router-outlet>
         </div>
