--- a/src/app/app.layout.component.scss
+++ b/src/app/app.layout.component.scss
@@ -5,5 +5,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #f9f9f9;
     font-size: 18px;
+    font-family: ui-sans-serif, -apple-system, system-ui, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica, Apple Color Emoji, Arial, Segoe UI Emoji, Segoe UI Symbol;
     box-sizing: border-box;
 }
