--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -23,8 +23,22 @@
                         </div>
                         <div class="flex align-items-center gap-3 mb-3">
                             <!--todo-->
-                            <p-button *ngIf="editorSelectedText !== ''" label="Replace Selection" severity="warning"></p-button>
-                            <p-button *ngIf="editorSelectedText === ''" label="Insert to Cursor" severity="help"></p-button>
+                            <p-button
+                                *ngIf="chatDialogVisible && editorSelectedText !== ''"
+                                label="Replace Selection"
+                                severity="warning"
+                                (onClick)="updateEditor()"
+                            >
+
+                            </p-button>
+                            <p-button
+                                *ngIf="chatDialogVisible &&  editorSelectedText === ''"
+                                label="Insert to Cursor"
+                                severity="help"
+                                (onClick)="updateEditor()"
+                            >
+
+                            </p-button>
                             <p-button label="Regenerate" icon="pi pi-refresh"></p-button>
                         </div>
                     </div>
