--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -39,7 +39,7 @@
                             >
 
                             </p-button>
-                            <p-button label="Regenerate" icon="pi pi-refresh"></p-button>
+<!--                            <p-button label="Regenerate" icon="pi pi-refresh"></p-button>-->
                         </div>
                     </div>
                     <div class="flex align-items-center gap-3 mb-3" style="margin-top: 1rem">
