modify: editor style

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -54,9 +54,9 @@
 <div class="p-editor-container" style="height: 85vh">
 
     <div #editor
-         class="p-editor-content"
+         class="p-editor-content editor-style"
          id="editor"
-         style="font-size: 16px; font-family: 'Times New Roman', serif; height: calc(100vh - 9rem); width: 100%;border: 2px;">
+    >
     </div>
     <p-overlayPanel #op>
         <p-splitButton
