modify: editor font style

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,13 +10,13 @@
 
     <div #toolbar class="p-editor-toolbar" id="toolbar" style="border: none !important;">
         <select class="ql-font" style="width: 11rem">
-            <option  value="times-new-roman">Times New Roman</option>
+            <option value="times-new-roman">Times New Roman</option>
             <option value="arial">Arial</option>
             <option value="comic-sans">Comic Sans</option>
             <option value="courier-new">Courier New</option>
-            <option value="georgia">Georgia</option>
+            <option selected value="georgia">Georgia</option>
             <option value="helvetica">Helvetica</option>
-            <option selected value="lucida">Lucida</option>
+            <option value="lucida">Lucida</option>
         </select>
         <select class="ql-size">
             <option value="10px">10px</option>
