--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -1,6 +1,6 @@
 .editor-style {
-    font-size: 16px;
-    font-family: 'Lucida Sans', sans-serif;
+    font-size: 18px;
+    font-family: Georgia, serif;
     height: calc(100vh - 9rem);
     width: 100%;
     border: 2px;
