modify: make the chat Msg dialog resizable and remove modal

--- a/src/app/app.layout.component.html
+++ b/src/app/app.layout.component.html
@@ -8,8 +8,7 @@
             <p-dialog
                 (onHide)="hidechatMsgDialog()"
                 header="🤖ChatGPT"
-                [modal]="true"
-                dismissableMask="true"
+                resizable="true"
                 maximizable="true"
                 position="bottom"
                 [(visible)]="chatMsgDialogVisible"
