--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ $gutter: 1rem; //for primeflex grid system
 
 
 @import url('https://fonts.googleapis.com/css2?family=Times+New+Roman:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arial:wght@400;700&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Arial:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courier+New:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Georgia:wght@400;700&display=swap');
