--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,9 +4,9 @@
         <span>ACEditor</span>
     </a>
 
-    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
-        <i class="pi pi-bars"></i>
-    </button>
+<!--    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">-->
+<!--        <i class="pi pi-bars"></i>-->
+<!--    </button>-->
 
     <div #toolbar class="p-editor-toolbar" id="toolbar" style="border: none !important;">
         <select class="ql-font" style="width: 11rem">
@@ -83,10 +83,10 @@
     <div #topbarmenu [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}"
          class="layout-topbar-menu">
 
-        <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">
-            <i class="pi pi-user"></i>
-            <span>Profile</span>
-        </button>
+<!--        <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">-->
+<!--            <i class="pi pi-user"></i>-->
+<!--            <span>Profile</span>-->
+<!--        </button>-->
 
         <!--Login Dialog-->
         <p-dialog
