--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -5,5 +5,14 @@
     width: 100%;
     border: 2px;
     line-height: 1.5;
+}
 
+.p-editor-container .p-editor-content .ql-editor {
+    background: #f1f1f1;
+}
+
+.ql-editor {
+    border-radius: 12px;
+    padding: 5% 8% 25px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.02), 0 0 2px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, 0.08);
 }
