fix: border radius in editor.component.html

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -56,6 +56,7 @@
     <div #editor
          class="p-editor-content editor-style"
          id="editor"
+         style="border-radius: 12px;"
     >
     </div>
     <p-overlayPanel #op>
