add: API calls for root files and directories

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,9 +4,9 @@
         <span>ACEditor</span>
     </a>
 
-<!--    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">-->
-<!--        <i class="pi pi-bars"></i>-->
-<!--    </button>-->
+    <button #menubutton (click)="layoutService.onMenuToggle()" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
+        <i class="pi pi-bars"></i>
+    </button>
 
     <div #toolbar class="p-editor-toolbar" id="toolbar" style="border: none !important;">
         <select class="ql-font" style="width: 11rem">
