--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -83,10 +83,10 @@
     <div #topbarmenu [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}"
          class="layout-topbar-menu">
 
-<!--        <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">-->
-<!--            <i class="pi pi-user"></i>-->
-<!--            <span>Profile</span>-->
-<!--        </button>-->
+        <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">
+            <i class="pi pi-user"></i>
+            <span>Profile</span>
+        </button>
 
         <!--Login Dialog-->
         <p-dialog
@@ -109,8 +109,7 @@
                 <input class="w-full mb-3" id="email1" pInputText type="text">
 
                 <label class="block text-900 font-medium mb-2" for="password1">Password</label>
-                <input class="w-full mb-3" id="password1" pInputText type="password">
-
+                <p-password styleClass="w-full mb-3" id="password1" [(ngModel)]="password" [feedback]="false" toggleMask="true"/>
                 <div class="flex align-items-center justify-content-between mb-6">
                     <div class="flex align-items-center">
                         <p-checkbox [binary]="true" id="rememberme1" styleClass="mr-2"></p-checkbox>
