add: call to API to create files and folders in menu bar

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,3 +1,12 @@
 .p-password .p-password-input {
     width: 100%;
 }
+
+.ql-snow.ql-toolbar .p-element button {
+    background: #a855f7;
+    color: white;
+}
+
+.layout-topbar .layout-topbar-menu {
+    margin: 0;
+}
