--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,7 +8,29 @@
         <i class="pi pi-folder-open"></i>
     </button>
 
-    <div #toolbar class="p-editor-toolbar" id="toolbar" style="border: none !important;">
+    <p-menu #menu [model]="items" [popup]="true" />
+    <button (click)="menu.toggle($event)" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
+        <i class="pi pi-plus"></i>
+    </button>
+    <p-dialog header="New File" [modal]="true" dismissableMask="true" [(visible)]="newFileDialogVisible" [style]="{ width: '25rem' }">
+        <div class="flex align-items-center gap-3 mb-3">
+            <input pInputText [(ngModel)]="newFileName"  class="flex-auto" autocomplete="off" />
+        </div>
+        <div class="flex justify-content-end gap-2">
+            <p-button label="Cancel" severity="secondary" (onClick)="newFileDialogVisible = false" />
+            <p-button label="Save" (onClick)="createNewFile()" />
+        </div>
+    </p-dialog>
+    <p-dialog header="New Folder" [modal]="true" dismissableMask="true" [(visible)]="newFolderDialogVisible" [style]="{ width: '25rem' }">
+        <div class="flex align-items-center gap-3 mb-3">
+            <input pInputText [(ngModel)]="newFolderName" class="flex-auto" autocomplete="off" />
+        </div>
+        <div class="flex justify-content-end gap-2">
+            <p-button label="Cancel" severity="secondary" (onClick)="newFolderDialogVisible = false" />
+            <p-button label="Save" (onClick)="createNewFolder()" />
+        </div>
+    </p-dialog>
+    <div #toolbar class="p-editor-toolbar " id="toolbar" style="border: none !important;margin: 0 auto 0 auto;">
         <select class="ql-font" style="width: 11rem">
             <option value="times-new-roman">Times New Roman</option>
             <option value="arial">Arial</option>
@@ -65,15 +87,15 @@
         <button class="ql-image">Image</button>
         <!--    <button class="ql-video">Video</button>-->
         <button class="ql-clean">Remove Formatting</button>
-    </div>
+        <p-splitButton
+            (onClick)="layoutService.updateChatMsgDialogVisible(true);"
+            [model]="prompts"
+            [style]="{height: '1.9rem', 'margin-top': '-1.5px', 'width': '4.5rem', 'margin-right' : '1rem', 'margin-left' : '1rem'}"
+            icon="pi pi-sparkles"
+            severity="help"
+        />
 
-    <p-splitButton
-        (onClick)="layoutService.updateChatMsgDialogVisible(true);"
-        [model]="prompts"
-        [style]="{height: '1.9rem', 'margin-top': '-1.5px', 'width': '4.5rem', 'margin-right' : '1rem'}"
-        icon="pi pi-sparkles"
-        severity="help"
-    />
+    </div>
 
     <button #topbarmenubutton (click)="layoutService.showProfileSidebar()"
             class="p-link layout-topbar-menu-button layout-topbar-button">
@@ -95,6 +117,8 @@
         <p-dialog
             [(visible)]="authDialogVisible"
             [style]="{ width: '35rem' }"
+            [modal]="true"
+            dismissableMask="true"
             closable="true"
         >
             <div class="text-center mb-5 w-full">
@@ -140,6 +164,8 @@
             (onHide)="hideSettingDialog()"
             [(visible)]="settingDialogVisible"
             [style]="{ width: '30rem', height: '23rem' }"
+            [modal]="true"
+            dismissableMask="true"
             header="Settings"
         >
             <!--      <span class="p-text-secondary block mb-5">Update your information.</span>-->
